--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,28 +12,36 @@
     font-card-other
     bg-gradient-to-tr from-red-900 to-zinc-800
     border border-zinc-700
-    rounded-md md:p-4 md:text-lg sm:p-2 sm:text-xs
-    transition-colors ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300;
+    rounded-md md:p-4 md:text-lg text-xs
+    transition-all ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300;
+  }
+
+  .btn-rules {
+    @apply tracking-wide
+    h-10 w-10 md:w-full
+    font-card-other bg-green-600
+    rounded-md md:text-xl text-xs
+    transition-all ease-in-out hover:bg-green-700 focus:border-emerald-700 duration-300 hover:tracking-widest;
   }
 
   .btn-buy {
     @apply font-card-other
-    italic
+    italic flex items-center gap-2
     tracking-widest
     bg-gradient-to-tr from-teal-900 to-zinc-800
     border border-zinc-700
-    rounded-md md:p-4 md:text-lg sm:p-2 sm:text-xs
-    transition-colors ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300;
+    rounded-md text-sm md:py-2 md:text-xl md:w-full
+    transition-all ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300 hover:text-orange-500;
   }
 
   .cards {
-    @apply font-card-sides
-    text-center text-4xl
-    md:h-32 md:w-28 sm:h-20 sm:w-14 font-semibold
+    @apply font-card-other
+    text-center text-lg md:text-7xl
+    h-16 md:h-32 md:w-28 sm:w-14
     bg-gradient-to-tr to-zinc-800
     rounded-md p-4
     border border-zinc-700
-    transition-colors ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300;
+    transition-all ease-in-out hover:border-emerald-700 focus:border-emerald-700 duration-300;
   }
 
   .stones {
@@ -42,8 +50,8 @@
     font-card-other
     bg-gradient-to-tr from-zinc-900 to-zinc-800
     border border-zinc-700
-    rounded-md p-4 md:text-lg sm:text-sm
-    transition-colors ease-in-out hover:text-emerald-600 hover:border-emerald-700 focus:border-emerald-700 focus:text-emerald-600 duration-300;
+    rounded-md md:p-4 text-sm md:text-lg
+    transition-all ease-in-out hover:text-emerald-600 hover:border-emerald-700 focus:border-emerald-700 focus:text-emerald-600 duration-300;
   }
 
   .winner {
@@ -51,8 +59,8 @@
     mt-1
     font-card-other cursor-default
     bg-gradient-to-tr from-blue-700 to-blue-500
-    border border-zinc-700
-    rounded-md p-4 md:text-lg sm:text-sm
-    transition-colors ease-in-out hover:text-zinc-900 hover:border-zinc-900 focus:border-zinc-900 focus:text-zinc-900 duration-300;
+    border border-zinc-700 overflow-hidden
+    rounded-md h-8 w-full md:text-lg sm:text-sm
+    transition-all ease-in-out hover:text-zinc-900 hover:border-zinc-900 focus:border-zinc-900 focus:text-zinc-900 duration-300;
   }
 }
